Add Note Fragment
* Added fragment to display individual notes
* Updated doa to handle more cases
* Added ability to complete tasks within the new NoteFragment
* Now only showing non completed notes
* Renamed fragments for clarity (as well as layout names)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="add_item">Add Item</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
+    <string name="example_date">01/01/2017</string>
+    <string name="complete_note">Complete Note</string>
 </resources>
