Added Edit Note Feature
* Create new fragment to edit notes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="description">Description</string>
     <string name="example_date">01/01/2017</string>
     <string name="complete_note">Complete Note</string>
+    <string name="edit_note">Edit Note</string>
 </resources>
